--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -15,6 +15,7 @@
 }
 
 \usetheme{Dresden}
+\setbeamertemplate{navigation symbols}{}
 
 \title{Freie Software Freies Wissen Dresden}
 \subtitle{Datenspuren 2016}
