Unklare Dokumentenklassenoption entfernt
Stattdessen lokal an Folien angebracht.

Signed-off-by: Daniel Borchmann <daniel@algebra20.de>

--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -1,4 +1,4 @@
-\documentclass[t]{beamer}
+\documentclass{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage[T1]{fontenc}
@@ -57,7 +57,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}[label=ct1b]
+\begin{frame}[label=ct1b,t]
   \frametitle{Uni-Stick}
 
   \vspace{-5mm}
