Noch mehr aufgeräumt
so bin ich …

Signed-off-by: Daniel Borchmann <daniel@algebra20.de>

--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -30,8 +30,14 @@
 
 \begin{frame}
   \begin{center}%
-    \includegraphics[width=4cm]{img-src/fsfw-logo-with-text.pdf}\\%
-    \vspace*{-1em}{Freie Software Freies Wissen}\\[1em]
+    \includegraphics[width=4cm]{img-src/fsfw-logo-with-text.pdf}\\
+
+    \vspace*{-0.5\baselineskip}
+
+    Hochschulgruppe für\\Freie Software Freies Wissen
+
+    \vspace*{\baselineskip}
+
     \structure{\Large Datenspuren 2016}
   \end{center}
 \end{frame}
@@ -39,13 +45,16 @@
 \begin{frame}[label=ct1]
   \frametitle{Wer sind wir?}
 
+  \onslide<+->
+
   \begin{itemize}
   \item Hochschulgruppe an der TU (gegründet 2014, ca. 10 P.)
   \item Studierende (TU, HTW) und andere Leute
   \item Hochschulen als Zielgruppe (Multiplikationswirkung)\\
     und Arbeitsfeld (Räume, Strukturen)
-  \item[]
-    \pause
+
+    \bigskip\onslide<+->
+
   \item Bisherige Projekte
     \begin{itemize}
     \item Linux-Install-Party, Linux-Presentation-Day {\tiny auch heute}
@@ -90,13 +99,13 @@
 \begin{frame}[label=ct2]
   \frametitle{Warum machen wir das? Aus Überzeugung!}
 
-  ~\\[6mm]
+  \onslide<+->
 
   \begin{itemize}
-  \item Überzeugung 1: freie und quelloffene Software ist (oft) besser
-  \item[$\rightarrow$] technische + nicht technische Argumente\\[8mm]
-    \pause
-  \item Überzeugung 2: öffentlich finanzierte wissenschaftliche Inhalte
+  \item \emph{Überzeugung 1}: freie und quelloffene Software ist (oft) besser\\
+    (technische + nicht technische Argumente)\\
+    \bigskip\onslide<+->
+  \item \emph{Überzeugung 2}: öffentlich finanzierte wissenschaftliche Inhalte
     (AutorInnen, GutachterInnen) sollten nicht von öffentlich finanzierten
     Bibliotheken für horrende Summen von Zeitschriften-Verlagen gekauft werden
     müssen
@@ -117,9 +126,12 @@
     \item \dots
     \end{itemize}
 
-  \item[]
+    \bigskip
+
   \item Aufmerksamkeit erzeugen / Lobby-Arbeit
-  \item[]
+
+    \bigskip
+
   \item Vernetzung mit anderen Städten
 
   \end{itemize}
@@ -129,28 +141,24 @@
 \begin{frame}[label=ct4]
   \frametitle{Weitere Informationen}
 
-  \begin{textblock*}{55mm}[0.,0.5](95mm,40mm)
-    \includegraphics[width=30mm]{img-src/website-qr}
-  \end{textblock*}
+  \onslide<+->
 
-  \begin{textblock*}{55mm}[0.,0.5](13mm,40mm)
-    \texttt{https://fsfw-dresden.de/}
-  \end{textblock*}
+  \begin{center}
+    \url{https://fsfw-dresden.de/}
+    % HACK THE PLANET!
+    $\;\;\left\{\;\;\text{
+        \parbox{2.3cm}{
+          \texttt{sprechstunde}\\[1mm]
+          \texttt{mitmachen}\\[1mm]
+          \texttt{fork}\\[1mm]
+          \texttt{newsletter}
+        }}
+    \right.$
 
-  % \begin{textblock*}{55mm}[0.,0.5](62mm,40.6mm)
-  %   \includegraphics[width=5mm]{img-src/brace}
-  % \end{textblock*}
+    \vspace*{2\bigskipamount}
 
-  \begin{textblock*}{55mm}[0.,0.5](69mm,40.6mm)
-    \texttt{sprechstunde}\\[1mm]
-    \texttt{mitmachen}\\[1mm]
-    \texttt{fork}\\[1mm]
-    \texttt{newsletter}\\[1mm]
-  \end{textblock*}
-
-  \begin{textblock*}{55mm}[0.,0.5](35mm,60.6mm)
     \includegraphics[width=50mm]{img-src/fsfw-netzwerke}
-  \end{textblock*}
+  \end{center}
 
 \end{frame}
 
