--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -69,20 +69,17 @@
 \begin{frame}[label=ct1b,t]
   \frametitle{Uni-Stick}
 
-  \vspace{-5mm}
-
   \begin{itemize}
-  \item 4000 Flyer in Ersti-Tüten:\\
-    Gutschein für 8 GB Stick mit freier Software fürs Studium
+  \item 4000 Flyer in Ersti-Tüten: Gutschein für 8~GB Stick mit freier Software
+    fürs Studium, Geld vom TU-StuRa für 80~Stück
   \item Live-Linux / freie Windows-Programme
-  \item Geld vom StuRa für 80 Stk.
     \pause
   \item Hat viel Arbeit gemacht
     \pause
   \item Ist gut angekommen (ca. 250 TN)
   \end{itemize}
 
-  \begin{textblock*}{40mm}[0.,0.](80mm,33mm)
+  \begin{textblock*}{40mm}[0.,0.](80mm,37mm)
     \visible<2->{
       \includegraphics[width=40mm]{img-src/usb-hub}
     }
