Informationen in der Titelfolie nicht duplizieren
Signed-off-by: Daniel Borchmann <daniel@algebra20.de>

--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -17,14 +17,14 @@
 \usetheme{Dresden}
 \setbeamertemplate{navigation symbols}{}
 
-\title{Freie Software Freies Wissen Dresden}
+\title{Hochschulgruppe für\\Freie Software und Freies Wissen}
 \subtitle{Datenspuren 2016}
-\author{\url{https://fsfw-dresden.de}}
 
 \addtobeamertemplate{frametitle}{}{%
   \begin{textblock*}{130mm}(.963\textwidth,8.4mm)
     \includegraphics[width=2.25cm]{img-src/fsfw-logo.pdf}
-  \end{textblock*}}
+  \end{textblock*}
+}
 
 \begin{document}
 
@@ -34,11 +34,11 @@
 
     \vspace*{-0.5\baselineskip}
 
-    Hochschulgruppe für\\Freie Software Freies Wissen
+    \inserttitle
 
     \vspace*{\baselineskip}
 
-    \structure{\Large Datenspuren 2016}
+    \structure{\Large \insertsubtitle}
   \end{center}
 \end{frame}
 
