Fehlendes Leerzeichen in der Fußzeile korrigiert
zu viele pdf-Updates, das wird nicht gut gehen …

Signed-off-by: Daniel Borchmann <daniel@algebra20.de>

--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -17,7 +17,7 @@
 \usetheme{Dresden}
 \setbeamertemplate{navigation symbols}{}
 
-\title{Hochschulgruppe für\\Freie Software und Freies Wissen}
+\title{Hochschulgruppe für Freie~Software~und~Freies~Wissen}
 \subtitle{Datenspuren 2016}
 
 \addtobeamertemplate{frametitle}{}{%
@@ -34,7 +34,7 @@
 
     \vspace*{-0.5\baselineskip}
 
-    \inserttitle
+    \parbox{6cm}{\centering\inserttitle}
 
     \vspace*{\baselineskip}
 
