Anpassungen fürs WikiLibrary-Barcamp 2016

--- a/fsfw-ds2016.tex
+++ b/fsfw-ds2016.tex
@@ -18,7 +18,7 @@
 \setbeamertemplate{navigation symbols}{}
 
 \title{Hochschulgruppe für Freie~Software~und~Freies~Wissen}
-\subtitle{Datenspuren 2016}
+\subtitle{WIKILIBRARY BARCAMP 2016}
 
 \addtobeamertemplate{frametitle}{}{%
   \begin{textblock*}{130mm}(.963\textwidth,8.4mm)
@@ -57,7 +57,7 @@
 
   \item Bisherige Projekte
     \begin{itemize}
-    \item Linux-Install-Party, Linux-Presentation-Day {\tiny auch heute}
+    \item Linux-Install-Party, Linux-Presentation-Day
     \item Verschlüsselungsgewinnspiel
     \item Monatliche Sprechstunde zu \LaTeX{} u.a.
     \item Formulierung eines Programmpapiers
